--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -15,7 +15,9 @@
              xhr.onload = function() {
                  var result = xhr.responseText;
                  var resultElement = document.getElementById('result');
-                 resultElement.innerHTML = result;
+                //  resultElement.innerHTML = result;
+                resultElement.innerHTML = $.post( "/postmethod", {javascript_data: result});
+                // resultElement.innerHTML = $.get( "/getmethod", result );
                  // TODO: implement function code to plot results
                  
              }
@@ -33,7 +35,7 @@
             <h1>Stock Prediction</h1>
             <p>Select the stock you would like to predict and a start date</p>
             <form method="POST"
-                  action="https://6uwg1hszj0.execute-api.eu-central-1.amazonaws.com/prod"
+                  action="https://283b9qcrkl.execute-api.eu-central-1.amazonaws.com/prod"
                   onsubmit="return submitForm(this);" > 
                 <div class="form-group">
                     <label for="stock">Choose a stock:</label>
