--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -11,20 +11,26 @@
         <script>
          "use strict";
          function submitForm(oFormElement) {
-             var xhr = new XMLHttpRequest();
-             xhr.onload = function() {
-                 var result = xhr.responseText;
-                 var resultElement = document.getElementById('result');
-                //  resultElement.innerHTML = result;
-                resultElement.innerHTML = $.post( "/postmethod", {javascript_data: result});
-                // resultElement.innerHTML = $.get( "/getmethod", result );
-                 // TODO: implement function code to plot results
-                 
-             }
-             xhr.open (oFormElement.method, oFormElement.action, true);
-             var stock = document.getElementById('stock');
-             xhr.send (stock.value);
-             return false;
+            var xhr = new XMLHttpRequest();
+            xhr.onload = function() {                
+                // retrieving POST request response from AWS API Gateway
+                var result = xhr.responseText;
+                var resultElement = document.getElementById('result');
+
+                // TODO: check if it can be done entirely inside Flask App
+                // setting async AJAX in order to wait for POST request to Flask App to return
+                $.ajaxSetup({async: false});
+                // POST request to Flask App
+                var flaskPostRequest = $.post( "/postmethod", {javascript_data: result});
+                // writing response data into HTML 
+                resultElement.innerHTML = flaskPostRequest.responseText;                  
+            };
+
+            xhr.open (oFormElement.method, oFormElement.action, true);
+            var stock = document.getElementById('stock');
+            // send POST request with requested stock ticket to AWS API Gateway
+            xhr.send (stock.value);
+            return false;
          }
         </script>
 
@@ -34,8 +40,9 @@
         <div class="container">
             <h1>Stock Prediction</h1>
             <p>Select the stock you would like to predict and a start date</p>
+            <!--update each time the ML endpoint has been deployed from scratch (not if it is updated)-->
             <form method="POST"
-                  action="https://283b9qcrkl.execute-api.eu-central-1.amazonaws.com/prod"
+                  action="https://vtsunyj133.execute-api.eu-central-1.amazonaws.com/prod"
                   onsubmit="return submitForm(this);" > 
                 <div class="form-group">
                     <label for="stock">Choose a stock:</label>
@@ -48,7 +55,7 @@
                 </div>
                 <button type="submit" class="btn btn-default">Predict</button>
             </form>
-            <h1 class="bg-success" id="result"></h1>
+            <p class="bg-success" id="result"></p>
         </div>
     </body>
 </html>
