--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -17,6 +17,7 @@
             var xhr = new XMLHttpRequest();
             alert(xhr);
             xhr.onload = function () {
+                alert("let's go!");
                 /** retrieving POST request response from AWS API Gateway,
                 * interrogating the ML Sagemaker Endpoint.
                 **/
@@ -29,7 +30,7 @@
                 $.ajaxSetup({ async: false });
                 // POST request to Flask App
                 alert(stock.value);
-                var flaskPostRequest = $.post("/predictfromdata", { ticker_name: stock.value, predicted_data: result });
+                var flaskPostRequest = $.post("/predict", { ticker_name: stock.value, predicted_data: result, dataset: 'valid' });
                 // writing response data into HTML 
                 resultElement.innerHTML = flaskPostRequest.responseText;
             };
@@ -46,7 +47,7 @@
         <h1>Stock Prediction</h1>
         <p>Select the stock you would like to predict and a start date</p>
         <!--update each time the ML endpoint has been deployed from scratch (not if it is updated)-->
-        <form method="POST" action="https://4vcgazqume.execute-api.eu-central-1.amazonaws.com/prod"
+        <form method="POST" action="https://nazs005opi.execute-api.eu-central-1.amazonaws.com/dev"
             onsubmit="return submitForm(this);">
             <div class="form-group">
                 <label for="stock">Choose a stock:</label>
