chore: removed debug alerts

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,9 +15,9 @@
         "use strict";
         function submitForm(oFormElement) {
             var xhr = new XMLHttpRequest();
-            alert(xhr);
+            // alert(xhr);
             xhr.onload = function () {
-                alert("let's go!");
+                // alert("let's go!");
                 /** retrieving POST request response from AWS API Gateway,
                 * interrogating the ML Sagemaker Endpoint.
                 **/
@@ -29,7 +29,7 @@
                 // setting async AJAX in order to wait for POST request to Flask App to return
                 $.ajaxSetup({ async: false });
                 // POST request to Flask App
-                alert(stock.value);
+                // alert(stock.value);
                 var flaskPostRequest = $.post("/predict", { ticker_name: stock.value, predicted_data: result, dataset: 'valid' });
                 // writing response data into HTML 
                 resultElement.innerHTML = flaskPostRequest.responseText;
