chore: completed js_extract

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,47 +5,23 @@
     <title>Stock Prices Prediction Web App</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
+    <!-- bootstrap script -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <!-- <script type="text/javascript" src="{{ url_for('static', filename='sbtStockPredReq.js') }}">"use strict";</script>    </head>
-    <body> -->
-    <script>
-        "use strict";
-        function submitForm(oFormElement) {
-            var xhr = new XMLHttpRequest();
-            // alert(xhr);
-            xhr.onload = function () {
-                // alert("let's go!");
-                /** retrieving POST request response from AWS API Gateway,
-                * interrogating the ML Sagemaker Endpoint.
-                **/
-                var result = xhr.responseText;
-                var resultElement = document.getElementById('result');
-
-                // TODO: check if it can be done entirely inside Flask App
-
-                // setting async AJAX in order to wait for POST request to Flask App to return
-                $.ajaxSetup({ async: false });
-                // POST request to Flask App
-                // alert(stock.value);
-                var flaskPostRequest = $.post("/predict", { ticker_name: stock.value, predicted_data: result, dataset: 'valid' });
-                // writing response data into HTML 
-                resultElement.innerHTML = flaskPostRequest.responseText;
-            };
-
-            xhr.open(oFormElement.method, oFormElement.action, true);
-            var stock = document.getElementById('stock');
-            // send POST request with requested stock ticket to AWS API Gateway
-            xhr.send(stock.value);
-            return false;
-        }
-    </script>
+    
+    <!--form submission script-->
+    <script type="text/javascript" src="{{ url_for('static', filename='sbtStockPredReq.js') }}">"use strict";</script>    </head>
+    <body>
 
     <div class="container">
-        <h1>Stock Prediction</h1>
-        <p>Select the stock you would like to predict and a start date</p>
+        <h1>Stock Price Prediction</h1>
+        <p>Select the stock you would like to predict Adjusted Close value</p>
         <!--update each time the ML endpoint has been deployed from scratch (not if it is updated)-->
         <form method="POST" action="https://nazs005opi.execute-api.eu-central-1.amazonaws.com/dev"
             onsubmit="return submitForm(this);">
