--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -23,7 +23,7 @@
         <h1>Stock Price Prediction</h1>
         <p>Select the stock you would like to predict Adjusted Close value</p>
         <!--update each time the ML endpoint has been deployed from scratch (not if it is updated)-->
-        <form method="POST" action="https://nazs005opi.execute-api.eu-central-1.amazonaws.com/dev"
+        <form method="POST" action="https://9j1g2ygp5g.execute-api.eu-central-1.amazonaws.com/dev"
             onsubmit="return submitForm(this);">
             <div class="form-group">
                 <label for="stock">Choose a stock:</label>
