--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,7 +27,7 @@
         <h1>Stock Price Prediction</h1>
         <p>Select the stock you would like to predict Adjusted Close value</p>
         <!--update each time the ML endpoint has been deployed from scratch (not if it is updated)-->
-        <form method="POST" action="https://9j1g2ygp5g.execute-api.eu-central-1.amazonaws.com/dev"
+        <form method="POST" action="https://kslrqedxja.execute-api.eu-central-1.amazonaws.com/dev"
             onsubmit="return submitForm(this);">
             <div class="form-group">
                 <label for="stock">Choose a stock:</label>
@@ -38,11 +38,9 @@
                     <option value="GOOGL">Alphabet Inc.</option>
                 </select>
                 <label for="predict_from_date"></label>
-                <input type="checkbox" id="predict_from_date" name="predict_from_date" onclick="controlCalendar()">
-                
-
+                <input type="checkbox" id="predict_from_date" name="predict_from_date" onclick="controlCalendar()" unchecked>
                 <label for="start_date_picker">Choose a start date for predictions</label>
-                <input type="date" id="start_date_picker" name="start_date_picker"/>
+                <input type="date" id="start_date_picker" name="start_date_picker" hidden>
             </div>
             <button type="submit" class="btn btn-default">Predict</button>
         </form>
