chore: fix to README

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,8 +26,8 @@
     <div class="container">
         <h1>Stock Price Prediction</h1>
         <p>Select the stock you would like to predict Adjusted Close value</p>
-        <!--update each time the ML endpoint has been deployed from scratch (not if it is updated)-->
-        <form method="POST" action="https://gzfwshhage.execute-api.eu-central-1.amazonaws.com/prod"
+        <!--insert real AWS API Gateway address here-->
+        <form method="POST" action="https://784pzxjlz3.execute-api.eu-central-1.amazonaws.com/prod"
             onsubmit="return submitForm(this);">
             <div class="form-group">
                 <label for="stock">Choose a stock:</label>
