--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -27,7 +27,7 @@
         <h1>Stock Price Prediction</h1>
         <p>Select the stock you would like to predict Adjusted Close value</p>
         <!--insert real AWS API Gateway address here-->
-        <form method="POST" action="https://784pzxjlz3.execute-api.eu-central-1.amazonaws.com/prod"
+        <form method="POST" action="put/here/APIGatewayURL/stage"
             onsubmit="return submitForm(this);">
             <div class="form-group">
                 <label for="stock">Choose a stock:</label>
